# dot_product

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  dot_product.cpp  measure.hpp
cmake/: FindEigen3.cmake  LLVMTools.cmake
scripts/: bench.sh  stat_desc.py
